--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -134,6 +134,9 @@
     label
       margin: 0 0 10px
 
+  .bootstrap-duallistbox-container .box1
+    margin-bottom: 30px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px)
   .form-search
@@ -232,6 +235,9 @@
     .tr
       width: calc(50% - 15px)
       margin: 0 0 30px
+
+  .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter
+    width: 100%
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 480px)
