--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -3,9 +3,9 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width: 1200px)
-  .form-filter-price
-    margin: 10px 0 0
+//@media only screen and (max-width: 1200px)
+//  .form-filter-price
+//    margin: 10px 0 0
 
 
 /* Medium Devices, Desktops */
@@ -21,6 +21,17 @@
 
   .gallery-publication__item, .video-slider-box
     height: 290px
+
+  .form-filter-price
+    margin: 10px 0 0
+
+  .form-filter
+    button[type="submit"]
+      margin: 10px 0 0
+      font-size: 18px
+
+  .btn-search-text
+    margin: 0 0 0 5px
 
 
 /* Small Devices, Tablets */
@@ -319,8 +330,8 @@
 
 
   footer .list-social
-    min-height: auto
-    margin: 0 0 0 10px
+    margin: 10px 0 0
+    width: 100%
 
   .table-prices .tr
     width: 100%
