--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -883,11 +883,21 @@ footer
     i
       color: #BB0000
 
+
 .profile-info__links-btn
   width: 100%
   margin: 0 0 4px
+  font-size: 20px
   &:last-child
     margin: 0
+  .color-red
+    i
+      color: red
+
+.notPublicItem
+  .svg-icon
+    i
+      transform: rotate(45deg)
 
 //publication
 .publication
@@ -1368,6 +1378,8 @@ footer
 
     .profile-info__links
       font-size: 18px
+    .profile-info__links-btn
+      font-size: 20px
   .btn-danger-my
     margin: 10px auto 0
 
