--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -894,10 +894,8 @@ footer
     i
       color: red
 
-.notPublicItem
-  .svg-icon
-    i
-      transform: rotate(45deg)
+.icon-hidden
+  display: none
 
 //publication
 .publication
